fix attempt #1 for ios images stretching

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -330,6 +330,7 @@ body {
     min-width: 212px;
     max-height: 500px;
     max-width: 523px;
+    object-fit: cover;
     margin: 2em 0;
   }
   /***********SECTION ONE END ******************/
@@ -350,6 +351,8 @@ body {
   .letsread-img {
     content: url("letsread.png");
     max-width: 700px;
+    object-fit: cover;
+
   }
 
   .proj-desc-cnt {
